fixed contact details query shifts

--- a/scss/site/_footer.scss
+++ b/scss/site/_footer.scss
@@ -1,6 +1,7 @@
 .site-footer {
     background-color: $night-grey;
     color: $mid-grey;
+    font-size: 0.875rem;
 
     ul {
         flex: calc(50% - 2rem);
