--- a/scss/site/_nav.scss
+++ b/scss/site/_nav.scss
@@ -10,9 +10,15 @@
 }
 
 .site-nav a,
-.mobile-links a,
+.mobile-link a,
 .site-footer a {
     color: $dark-grey;
+}
+
+.mobile-link a {
+    display: block;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .site-nav a:hover,
@@ -49,12 +55,6 @@
     right: -40%;
     padding-top: 2.5rem;
     z-index: -1;
-}
-
-.mobile-link a {
-    display: block;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
 }
 
 .list-view {
