--- a/scss/site/_utility.scss
+++ b/scss/site/_utility.scss
@@ -17,11 +17,13 @@
 
 .wrapper {
     max-width: 52.75rem;
-    padding: 0 1.5rem;
-    margin: 0 auto;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.margin-btm { margin-bottom: 1.5rem; }
+
 .margin-btm-lg { margin-bottom: 3rem; }
 
 .grey-bkg {
